fix: remove overflow

--- a/src/Components/Projects/Project/Project.css
+++ b/src/Components/Projects/Project/Project.css
@@ -80,4 +80,8 @@
     --project-width: 200px;
     --blob-left: 200px;
   }
+  
+  .Project {
+    margin: 0 0 2rem 0;
+  }
 }
